// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mobile verification Screen should render snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <DetailedHeader
    icon="left-arrow"
    onIconPress={[Function]}
    subTitle="test@yopmail.com"
    title="loginWithFacebook"
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#33495E",
          "marginBottom": 12,
        }
      }
      type="small"
    >
      enterNumberForProfileForLogin
    </Text>
    <Formik
      initialValues={
        Object {
          "phone": "",
        }
      }
      onSubmit={[Function]}
      validate={[Function]}
    >
      <Component />
    </Formik>
  </View>
  <BottomSheetListView
    data={Array []}
    isBottomSheetVisible={false}
    listTitle="countryRegion"
    onCloseDropDown={[Function]}
    onSelectItem={[Function]}
    selectedValue="+91"
    testID="bottomSheet"
  />
</View>
`;

exports[`Mobile verification Screen should render snapshot when its not from login 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <DetailedHeader
    icon="left-arrow"
    onIconPress={[Function]}
    subTitle="test@yopmail.com"
    title="signUpWithGoogle"
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#33495E",
          "marginBottom": 12,
        }
      }
      type="small"
    >
      enterNumberForProfileForSignUp
    </Text>
    <Formik
      initialValues={
        Object {
          "phone": "",
        }
      }
      onSubmit={[Function]}
      validate={[Function]}
    >
      <Component />
    </Formik>
  </View>
  <BottomSheetListView
    data={Array []}
    isBottomSheetVisible={false}
    listTitle="countryRegion"
    onCloseDropDown={[Function]}
    onSelectItem={[Function]}
    selectedValue="+91"
    testID="bottomSheet"
  />
</View>
`;
